  * Replace initrd-tools with initramfs-tools.
  * Run aptitude with --without-recommends option.
  * Run grub-install using --no-floppy, as requested by gebi.
  * Support setting hostname via cmdline.
  * Close issue in grml's BTS which showed up during development in hg:
    Fix handling of config file inside chroot, thanks for spotting, gebi!
    [Closes: issue512]

 -- Michael Prokop <mika@grml.org>  Sat, 30 Aug 2008 01:44:38 +0200

grml-debootstrap (0.17) unstable; urgency=low

  * Support "-r" option as well as "--release" as being documented.
    Thanks for reporting, Jens Kubieziel.

 -- Michael Prokop <mika@grml.org>  Wed, 26 Mar 2008 22:44:06 +0100

grml-debootstrap (0.16) unstable; urgency=low

  * Drop the second passwd call.

 -- Michael Prokop <mika@grml.org>  Wed, 19 Dec 2007 10:10:54 +0100

grml-debootstrap (0.15) unstable; urgency=low

  * Make sure the passwd command succeeds.
    Thanks, Wolfgang Karall! [Closes: issue363]

 -- Michael Prokop <mika@grml.org>  Sun, 16 Dec 2007 16:30:37 +0100

grml-debootstrap (0.14) unstable; urgency=low

  * Make sure variable ISO is unset variable if not used.
    Thanks for the bugreport, Darsha! [Closes: issue352]

 -- Michael Prokop <mika@grml.org>  Sun, 09 Dec 2007 20:16:15 +0100

grml-debootstrap (0.13) unstable; urgency=low

  * Fix manpage handling of xsltproc.

 -- Michael Prokop <mika@grml.org>  Thu, 06 Dec 2007 23:47:09 +0100

grml-debootstrap (0.12) unstable; urgency=low

  * Fixed some typos in the manpage.
    Thanks for the patch, Alexander 'Stone' Steinböck!

 -- Michael Prokop <mika@grml.org>  Wed, 24 Oct 2007 10:16:03 +0200

grml-debootstrap (0.11) unstable; urgency=low

  * Better inform user about already executed stages.
    [Closes: issue299]

 -- Michael Prokop <mika@grml.org>  Sat,  6 Oct 2007 18:03:16 +0200

grml-debootstrap (0.10) unstable; urgency=low

  * Add console-common to /etc/debootstrap/packages. Thanks for
    the feature request, Thorsten Strusch!