@@ -32,8 +32,9 @@ grml-debootstrap (0.18) unstable; urgency=low
   * Close issue in grml's BTS which showed up during development in hg:
     Fix handling of config file inside chroot, thanks for spotting, gebi!
     [Closes: issue512]
+  * Update debian/ to make lintian happy.
 
- -- Michael Prokop <mika@grml.org>  Sat, 30 Aug 2008 01:44:38 +0200
+ -- Michael Prokop <mika@grml.org>  Sat, 30 Aug 2008 02:01:14 +0200
 
 grml-debootstrap (0.17) unstable; urgency=low
 
